--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -42,7 +42,7 @@
               </div>
             </div>
             <center>
-              <button class="btn waves-effect waves-light teal" type="submit" name="action">登録</button>
+              <button class="btn waves-effect waves-light teal" type="button"  onclick="location.href='spot.html'" name="action">登録</button>
             <center>
             </div>
         </form>
