--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -13,13 +13,14 @@
 
         <div class="tab">
             <div class="tabbox">
-                <input type="radio" name="tabset" id="tabcheck1" checked>
-                <label for="tabcheck1" class="tab">食べる</label>
-                <input type="radio" name="tabset" id="tabcheck2">
-                <label for="tabcheck2" class="tab">観る</label>
-                <input type="radio" name="tabset" id="tabcheck3">
-                <label for="tabcheck3" class="tab">遊ぶ</label>
-
+                
+                    <input type="radio" name="tabset" id="tabcheck1" checked>
+                    <label for="tabcheck1" class="tab">食べる</label>
+                    <input type="radio" name="tabset" id="tabcheck2">
+                    <label for="tabcheck2" class="tab">観る</label>
+                    <input type="radio" name="tabset" id="tabcheck3">
+                    <label for="tabcheck3" class="tab">遊ぶ</label>
+               
                 <div class="tabcontent" id="tabcontent1">
 
                     <h3>食べる</h3>
@@ -29,8 +30,9 @@
 
                         <ul>
                             <li class="yukari">
+
                                 <a target="_blank" rel="noopener noreferrer" href="https://www.yukarichan.co.jp/">
-                                    <h3>お好み焼ゆかり 曾根崎本店</h3>
+                                    <input type="checkbox" name=“sample” value="1">お好み焼ゆかり 曾根崎本店
                                     <div class="img_yukari">
                                         <img src="../imag/yukari.jpg">
                                     </div>
@@ -65,7 +67,7 @@
                     <ul>
                         <li class="oosakajyou">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.osakacastle.net/">
-                                <h3>大坂城</h3>
+                                <input type="checkbox" name=“sample” value="2">大坂城
                                 <div class="img_oosakajyou">
                                     <img src="../imag/oosakajyou.jpg">
                                 </div>
@@ -80,7 +82,7 @@
 
                         <li class="tsutenkaku">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.tsutenkaku.co.jp/">
-                                <h3>通天閣/新世界</h3>
+                                <input type="checkbox" name=“sample” value="2">通天閣/新世界
                                 <div class="img_tsutenkaku">
                                     <img src="../imag/tsutenkaku.jpg">
                                 </div>
@@ -94,7 +96,7 @@
 
                         <li class="tarou">
                             <a target="_blank" rel="noopener noreferrer" href="https://taiyounotou-expo70.jp/">
-                                <h3>太陽の塔</h3>
+                                <input type="checkbox" name=“sample” value="2">太陽の塔
                                 <div class="img_tarou">
                                     <img src="../imag/taiyounotou.jpg">
                                 </div>
@@ -108,7 +110,7 @@
 
                         <li class="ngk">
                             <a target="_blank" rel="noopener noreferrer" href="https://ngk.yoshimoto.co.jp/">
-                                <h3>なんばグランド花月</h3>
+                                <input type="checkbox" name=“sample” value="2">なんばグランド花月
                                 <div class="img_ngk">
                                     <img src="../imag/nanbakagetu.jpg">
                                 </div>
@@ -132,7 +134,7 @@
                         <li class="usj">
 
                             <a target="_blank" rel="noopener noreferrer" href="https://www.usj.co.jp/web/ja/jp">
-                                <h3>ユニバーサルスタジオジャパン</h3>
+                                <input type="checkbox" name=“sample” value="3">ユニバーサルスタジオジャパン
                                 <div class="img_usj">
                                     <img src="../imag/USJ_image.jpg">
                                 </div>
@@ -147,7 +149,7 @@
                         <li class="cupnoodles">
                             <a target="_blank" rel="noopener noreferrer"
                                 href="https://www.cupnoodles-museum.jp/ja/osaka_ikeda/">
-                                <h3>カップラーメンミュージアム</h3>
+                                <input type="checkbox" name=“sample” value="3">カップラーメンミュージアム
                                 <div class="img_cup">
                                     <img src="../imag/cupnoodlesM.jpg">
                                 </div>
@@ -161,7 +163,7 @@
 
                         <li class="kaiyukan">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.kaiyukan.com/">
-                                <h3>海遊館</h3>
+                                <input type="checkbox" name=“sample” value="3">海遊館
                                 <div class="img_kaiyukan">
                                     <img src="../imag/kaiyuukann.jpg">
                                 </div>
@@ -175,7 +177,7 @@
 
                         <li class="tennoujizoo">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.tennojizoo.jp/">
-                                <h3>天王寺動物園</h3>
+                                <input type="checkbox" name=“sample” value="3">天王寺動物園
                                 <div class="img_zoo">
                                     <img src="../imag/tennnoujizoo.jpg">
                                 </div>
@@ -197,7 +199,7 @@
         <br>
 
         <div class="pickup">
-            <a target="_blank" rel="noopener noreferrer" >
+            <a target="_blank" rel="noopener noreferrer">
             </a>
             <button type="button" onclick="location.href='map.html'">pickup</button>
             </a>
