html変更・追記

--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -41,12 +41,19 @@
 		</table>
 		<!-- ▲▲▲ 以上テーブル ▲▲▲ -->
 
+		<div class="button">
+			<!-- ▼▼▼ 以下修正ボタン（ひとつ前のページのリンク）▼▼▼ -->
+			<h3 class="shusei">
+				<button type="button" onclick="location.href='map.html'">修正する</button>
+			</h3>
+			<!-- ▲▲▲以上修正ボタン ▲▲▲-->
 
-		<!-- ▼▼▼ 以下修正ボタン（ひとつ前のページのリンク）▼▼▼ -->
-		<h3>
-			<a href="map.html">修正する</a>
-		</h3>
-		<!-- ▲▲▲以上修正ボタン ▲▲▲-->
+			<!-- ▼▼▼以下保存ボタン▼▼▼ -->
+			<h3 class="hozon">
+				<input type="submit" value="保存">
+			</h3>
+			<!-- ▲▲▲以上保存ボタン▲▲▲ -->
+		</div>
 
 
 		<h3>
