--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="UTF-8">
@@ -11,7 +11,7 @@
 	<h1>oritabi</h1>
 	<hr>
 	<!-- ▼▼▼ 新規登録時のみ表示 ▼▼▼ -->
-	<div th:if="${costomerForm.costomer}" style="margin: 5px">
+	<div th:if="${costomerForm.newCostomer}" style="margin: 5px">
 		<h3>お客様一覧</h3>
 		<!-- 削除完了コメント -->
 		<p th:if="${delcomplete}" th:text="${delcomplete}"></p>
@@ -53,15 +53,15 @@
 		<p th:if="${#lists.isEmpty(list)}">登録されている顧客情報はありません。</p>
 		<!-- △△△データが一件もない場合表示△△△ -->
 	</div>
-	<div th:if="${spotForm.tourist}" style="margin: 5px">
-		<h3>観光地スポット <a th:href="@{/teamB/touroku}"></a><br></h3>
+	<div th:if="${spotForm.newSpot}" style="margin: 5px">
+		<h3>観光地スポット <a th:href="@{/teamB/tourist}"></a><br></h3>
 	
 			<!-- ▼▼▼ Form ▼▼▼ -->
-			<form method="POST" th:action="${spotForm.tourist}? @{/teamB/insert} : @{/teamB/update}" th:object="${spotForm}">
+			<form method="POST" th:action="${spotForm.newSpot}? @{/oritabi/insert} : @{/oritabi/update}" th:object="${spotForm}">
 				<label>観光地連番</label>
-				<input type="text" th:field="*{spot_id}" /><br>
+				<input type="text" th:field="*{spotId}" /><br>
 				<label>観光地名</label>
-				<input type="text" th:field="*{spot_name}" /><br>
+				<input type="text" th:field="*{spotName}" /><br>
 				<label>観光地住所</label>
 				<input type="text" th:field="*{address}"><br>
 				<label>WEBページ</label>
@@ -69,11 +69,11 @@
 				<label>電話番号</label>
 				<input type="text" th:field="*{tel}"><br> 
 				<label>オススメ</label><br>
-				<textarea rows="5" cols="50" th:field="*{memo}"></textarea><br>
+				<textarea rows="5" cols="50" th:field="*{point}"></textarea><br>
 				<label>目的ID</label>
-				<input type="text" th:field="*{purpose}"><br>
+				<input type="text" th:field="*{purposeId}"><br>
 				<label>画像URL</label>
-				<input type="text" th:field="*{img}"><br>    
+				<input type="text" th:field="*{imageFileName}"><br>    
 				<div class="button006">
 				<input type="submit" value="送信">
 				</div>
@@ -107,18 +107,18 @@
 					<th>削除</th>
 				</tr>
 				<tr th:each="obj : ${list}" align="center">
-					<td th:text="${obj.spot_id}"></td>
-					<td th:text="${obj.spot_name}"></td>
+					<td th:text="${obj.spotId}"></td>
+					<td th:text="${obj.spotName}"></td>
 					<td th:text="${obj.address}" align="left"></td>
 					<td th:text="${obj.web}" align="left"></td>
 					<td th:text="${obj.tel}"></td>
 					<td th:text="${obj.point}" align="left"></td>
-					<td th:text="${obj.img}" align="left"></td>
+					<td th:text="${obj.imageFileName}" align="left"></td>
 					<!-- 				<td th:text="${obj.purpose}"></td> -->
 					<td th:text="${obj.tel}"></td>
 					<!-- 編集ボタン -->
 					<td>
-						<form method="GET" th:action="@{/teamB/{id}(id=${obj.spot_id})}">
+						<form method="GET" th:action="@{/teamB/{id}(id=${obj.spotId})}">
 							<input type="submit" value="編集">
 						</form>
 					</td>
