--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -197,10 +197,10 @@ $(function($){
 				<ul>
 					<li><a href="#nav01">ボタン</a></li>
 					<li><a href="#nav02">ボタン</a></li>
-					<li><a href="#nav03">ボタン</a></li>
-					<li><a href="#nav04">ボタン</a></li>
+					<li><a href="#nav03" class="btn-sin">新規登録</a></li>
+					<li><a href="#nav04"class= "btn-log">ログイン</a></li>
 				</ul>
-			</div>
+			</div> 
 		</div>
 	</header>
 
@@ -245,11 +245,11 @@ $(function($){
 					</dl>
 					
 					<dl>
-						<dd>ボタン</dd>
+						<dd><div class="btn-sin">新規登録</div></dd>
 					</dl>
 					
 					<dl>
-						<dd>ボタン</dd>
+						<dd><div class= "btn-log">ログイン</div></dd>
 					</dl>
 				
 			</div>
