--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -232,7 +232,7 @@ $(function($){
 	<!--footer_メニューの中身-->
 			<div class="f_open">
 				<div class="f_logo">
-				 <img src="images/iRwhitea.png" alt=""/>
+				 <img src="src/main/resources/imag/logoのコピー.png" alt=""/>
 				</div>
 				
 				<div class="category_list">
