--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -172,7 +172,7 @@ $(function($){
 	<header id="header">
 	<div class="container">
 		<div id="h_top">
-		    <div class="h_logo"><a href=""><img src="images/logoのコピー.png" alt=""/></a></div>
+		    <div class="h_logo"><a href=""><img src="../imag/logo22.png" alt=""/></a></div>
 			<div class="h_nav">
 				<nav id="gNav">
 					<ul class="nav">
@@ -191,7 +191,7 @@ $(function($){
 	
 	<header class="mheader">
 		<div class="pc_menuFlex">
-			<div class="i-logo"><a href="#"><img src="images/logoのコピー.png" alt=""/></a>
+			<div class="i-logo"><a href="#"><img src="../imag/logo22.png" alt=""/></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
@@ -232,7 +232,7 @@ $(function($){
 	<!--footer_メニューの中身-->
 			<div class="f_open">
 				<div class="f_logo">
-				 <img src="src/main/resources/imag/logoのコピー.png" alt=""/>
+				 <img src="../imag/logo22.png" alt=""/>
 				</div>
 				
 				<div class="category_list">
