--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -362,7 +362,7 @@ $(function($){
     
     <footer>
     <p class="copyright">
-      ©︎Pochikifu　All Rights Reserved.
+        ©︎Oritabi　All Rights Reserved.
     </p>
     </footer>
     <!--sliderのjs-------------------------------------------->
