--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -208,7 +208,7 @@ $(function($){
         <br><br>
         <br><br>
         <br><br>
-        
+
 	<div id="headline">
 		<h1 class="headline">マイページ</h1>
 	</div>
@@ -332,7 +332,7 @@ $(function($){
     
     <footer>
     <p class="copyright">
-      ©︎Pochikifu　All Rights Reserved.
+       ©︎Oritabi　All Rights Reserved.
     </p>
     </footer>
     <!--sliderのjs-------------------------------------------->
