--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -260,7 +260,7 @@ $(function($){
 	
 	<footer>
 	<p class="copyright">
-      ©︎Pochikifu　All Rights Reserved.
+		©︎Oritabi　All Rights Reserved.
     </p>
 	</footer>
 	<!--sliderのjs-------------------------------------------->
