--- a/src/main/resources/templates/manager_henshu.html
+++ b/src/main/resources/templates/manager_henshu.html
@@ -283,7 +283,7 @@ $(function($){
 	
 	<footer>
 	<p class="copyright">
-      ©︎Pochikifu　All Rights Reserved.
+		©︎Oritabi　All Rights Reserved.
     </p>
 	</footer>
 	<!--sliderのjs-------------------------------------------->
