--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -257,7 +257,7 @@ $(function($){
 
 <footer>
 <p class="copyright">
-  ©︎Pochikifu　All Rights Reserved.
+    ©︎Oritabi　All Rights Reserved.
 </p>
 </footer>
 <!--sliderのjs-------------------------------------------->
