--- a/src/main/resources/templates/purpose_osaka.html
+++ b/src/main/resources/templates/purpose_osaka.html
@@ -209,7 +209,7 @@ $(function($){
         <br><br>
         <br><br>
         <br><br>
-        
+
     <div class="osaka_spot">
         <br>
         <h1>大阪エリア</h1>
@@ -320,7 +320,7 @@ $(function($){
 
 <footer>
 <p class="copyright">
-  ©︎Pochikifu　All Rights Reserved.
+   ©︎Oritabi　All Rights Reserved.
 </p>
 </footer>
 <!--sliderのjs-------------------------------------------->
