--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -53,13 +53,15 @@
 		<p th:if="${#lists.isEmpty(list)}">登録されている顧客情報はありません。</p>
 		<!-- △△△データが一件もない場合表示△△△ -->
 	</div>
-	<div th:if="${spotForm.newSpot}" style="margin: 5px">
-		<h3>観光地スポット <a th:href="@{/teamB/tourist}"></a><br></h3>
+	<!-- th:if="${spotForm.newSpot}" -->
+	<div style="margin: 5px">
+		<h3>観光地スポット<br></h3>
 	
 			<!-- ▼▼▼ Form ▼▼▼ -->
-			<form method="POST" th:action="${spotForm.newSpot}? @{/oritabi/insert} : @{/oritabi/update}" th:object="${spotForm}">
-				<label>観光地連番</label>
-				<input type="text" th:field="*{spotId}" /><br>
+			<!-- <form method="POST" th:action="${spotForm.newSpot}? @{/oritabi/insertSpot} : @{/oritabi/update}" th:object="${spotForm}"> -->
+			<form method="POST" th:action="@{/oritabi/insertSpot}" th:object="${spotForm}">
+				<!-- <label>観光地連番</label> -->
+				<!-- <input type="text" th:field="*{spotId}" /><br> -->
 				<label>観光地名</label>
 				<input type="text" th:field="*{spotName}" /><br>
 				<label>観光地住所</label>
@@ -78,6 +80,7 @@
 				<input type="submit" value="送信">
 				</div>
 			</form>
+			<p th:if="${complete}" th:text="${complete}"></p>
 		
 		<!-- 削除完了コメント -->
 		<p th:if="${delcomplete}" th:text="${delcomplete}"></p>
@@ -140,7 +143,7 @@
 	</div>
 	<!-- △△△新規登録時のみ表示△△△ -->
 	<!-- ▼▼▼新規登録時でない時に表示▼▼▼ -->
-	<p th:unless="${costomerForm.costomer}">
+	<p th:unless="${costomerForm.newCostomer}">
 		<a href="#" th:href="@{/teamB}"  type="button" onclick="location.href='manager_login.html'">ログアウト</a>
 	</p>
 	<!-- △△△新規登録時でない時に表示△△△ -->
