--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -291,13 +291,18 @@
 			th:object="${spotForm}">
 			<!-- <label>観光地連番</label> -->
 			<!-- <input type="text" th:field="*{spotId}" /><br> -->
-			<label>観光地名</label> <input type="text" th:field="*{spotName}" /><br>
-			<label>観光地住所</label> <input type="text" th:field="*{address}"><br>
-			<label>WEBページ</label> <input type="text" th:field="*{web}"><br>
-			<label>電話番号</label> <input type="text" th:field="*{tel}"><br>
+			<label>観光地名</label> 
+			<input type="text" th:field="*{spotName}" /><br>
+			<label>観光地住所</label>
+			 <input type="text" th:field="*{address}"><br>
+			<label>WEBページ</label>
+			 <input type="text" th:field="*{web}"><br>
+			<label>電話番号</label>
+			 <input type="text" th:field="*{tel}"><br>
 			<label>オススメ</label><br>
 			<textarea rows="5" cols="50" th:field="*{point}"></textarea>
-			<br> <label>目的ID</label> <input type="text"
+			<br> <label>目的ID</label>
+			 <input type="text"
 				th:field="*{purposeId}"><br> <label>画像URL</label> <input
 				type="text" th:field="*{imageFileName}"><br>
 			<div class="button006">
