--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -12,42 +12,56 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 
 <!--リセットユイ-->
-<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+<link rel="stylesheet" type="text/css"
+	href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 
 <!--headercss-->
 <link href="../static/css/meanmenu.css" rel="stylesheet" type="text/css">
-<link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="../static/css/font-awesome.min.css" rel="stylesheet"
+	type="text/css">
 <link href="../static/css/header.css" rel="stylesheet" type="text/css">
 <!--css-->
 <link href="../static/css/i-style.css" rel="stylesheet" type="text/css">
 <link href="../static/css/parts.css" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
-<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css"
+	href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+	integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI="
+	crossorigin="anonymous" />
 
-<!--jquery cdn-->   
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--jquery cdn-->
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <!--googlefont細-->
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
+<link
+	href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap"
+	rel="stylesheet">
 <!--googlefont太-->
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+<link
+	href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
+	rel="stylesheet">
 <!--googlefontRoboto-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+<link
+	href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+	rel="stylesheet">
 
 
 <!--scroll.js-->
 <script type="text/javascript" src="js/scroll.js"></script>
-    
+
 <!--slider-->
 <link href="../static/css/slick.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slick-theme.css" rel="stylesheet" type="text/css">
+<link href="../static/css/slick-theme.css" rel="stylesheet"
+	type="text/css">
 
 <!--headerscript-->
 <script type="text/javascript">
@@ -97,7 +111,7 @@ $(function($){
     });
 });
 </script>
-    
+
 <!--sliderscript-->
 <script>
     
@@ -174,14 +188,16 @@ $(function($){
 	<header id="header">
 		<div class="container">
 			<div id="h_top">
-				<div class="h_logo"><a href=""><img src="../imag/logo22.png" alt=""/></a></div>
+				<div class="h_logo">
+					<a href=""><img src="../imag/logo22.png" alt="" /></a>
+				</div>
 				<div class="h_nav">
 					<nav id="gNav">
 						<ul class="nav">
 							<li><a href="">ボタン</a></li>
 							<li><a href="">ボタン</a></li>
 							<li><a href="" class="btn-sin">新規登録</a></li>
-							<li><a href=""class= "btn-log">ログイン</a></li>
+							<li><a href="" class="btn-log">ログイン</a></li>
 						</ul>
 						<div class="mask"></div>
 					</nav>
@@ -189,44 +205,119 @@ $(function($){
 			</div>
 		</div>
 	</header>
-	
-		
-		<header class="mheader">
-			<div class="pc_menuFlex">
-				<div class="i-logo"><a href="#"><img src="../imag/logo22.png" alt=""/></a>
-				</div>
-				<div class="pc_menu">
-					<ul>
-						<li><a href="#nav01">ボタン</a></li>
-						<li><a href="#nav02">ボタン</a></li>
-						<li><a href="#nav03" class="btn-sin">新規登録</a></li>
-						<li><a href="#nav04"class= "btn-log">ログイン</a></li>
-					</ul>
-				</div> 
+
+
+	<header class="mheader">
+		<div class="pc_menuFlex">
+			<div class="i-logo">
+				<a href="#"><img src="../imag/logo22.png" alt="" /></a>
 			</div>
-		</header>
-	
-	<br><br>
-    <br><br>
-    <br><br>
+			<div class="pc_menu">
+				<ul>
+					<li><a href="#nav01">ボタン</a></li>
+					<li><a href="#nav02">ボタン</a></li>
+					<li><a href="#nav03" class="btn-sin">新規登録</a></li>
+					<li><a href="#nav04" class="btn-log">ログイン</a></li>
+				</ul>
+			</div>
+		</div>
+	</header>
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 	<h1>ルート選択</h1>
-	<div class="box">
 
-		<!-- 地図を表示する要素 -->
+	<script src="https://code.jquery.com/jquery.min.js"></script>
+	<!-- ボタン -->
+	<button id="toggleButton">ルート表示</button>
+
+	<!-- 表示用の要素1 -->
+	<div id="displayElement1">
+		<div id="map1"></div>
+	</div>
+
+	<!-- 表示用の要素2（初めは非表示） -->
+	<div id="displayElement2" style="display: none;">
 		<div id="map"></div>
+		<div class="suke">
+			<h3>スケジュール</h3>
+			<!-- 住所の要素 -->
+			<p>名前 場所</p>
+			<!-- 所要時間の要素 -->
+			<div id="leg1"></div>
+			<p>名前 場所</p>
+			<div id="leg2"></div>
+			<p>名前 場所</p>
+			<div id="leg3"></div>
+			<p>名前 場所</p>
 
-		<!-- 所要時間を表示する要素 -->
-		<!-- 所要時間を表示する要素1 -->
-		<div id="leg1"></div>
+		</div>
+	</div>
 
-		<!-- 所要時間を表示する要素2 -->
-		<div id="leg2"></div>
+	<script>
+        $(document).ready(function() {
+            // ボタンがクリックされたときに要素を切り替える
+            $("#toggleButton").click(function() {
+                // 現在表示されている要素を非表示にし、非表示の要素を表示に切り替える
+                $("#displayElement1").toggle();
+                $("#displayElement2").toggle();
+            });
+        });
+    </script>
 
-		<!-- 所要時間を表示する要素3 -->
-		<div id="leg3"></div>
+
+	<div class="box">
+		<!-- 地図を表示する要素 -->
+		<!-- ボタンを押すと表示 -->
+		<!-- マップを表示するdiv要素 -->
+		<div>
+			<script>
+	        // Google Mapsを初期化するコード
+	        function initMap() {
+	            // マップを表示する位置を設定
+	            const mapCenter = { lat: 34.693738, lng: 135.502165 }; // 大阪市の緯度経度
+
+	            // マップを生成
+	            const map = new google.maps.Map(document.getElementById('map1'), {
+	                center: mapCenter, // 地図の中心を設定
+	                zoom: 12 // ズームレベルを設定
+	            });
+
+	         // 住所の配列
+	            const addresses = [
+	                '大阪駅',
+	                '京セラドーム',
+	                '心斎橋駅',
+	                '海遊館'
+	                // 追加の住所をここに追加
+	            ];
+
+	            // 住所から緯度経度を取得し、ピンを立てる
+	            const geocoder = new google.maps.Geocoder();
+
+	            addresses.forEach(function (address) {
+	                geocoder.geocode({ 'address': address }, function (results, status) {
+	                    if (status === 'OK') {
+	                        const marker = new google.maps.Marker({
+	                            map: map,
+	                            position: results[0].geometry.location,
+	                            title: address // ピンに表示するタイトル
+	                        });
+	                    } else {
+	                        alert('ジオコーディングに失敗しました: ' + status);
+	                    }
+	                });
+	            });
+	        }
+	    </script>
+		</div>
+
 
 		<script>
-			// Google Maps JavaScript APIの読み込み
 			function initMap() {
 				// 地図を表示する位置を設定
 				const mapCenter = {
@@ -263,6 +354,7 @@ $(function($){
 					optimizeWaypoints : true, // ウェイポイントの最適化を有効にする
 				};
 
+				
 				// Directions サービスを使用して経路を計算
 				directionsService
 						.route(
@@ -274,9 +366,9 @@ $(function($){
 												.setDirections(response);
 
 										// 所要時間を表示
-										document.getElementById('leg1').textContent = `Leg 1: ${response.routes[0].legs[0].duration.text}`;
-										document.getElementById('leg2').textContent = `Leg 2: ${response.routes[0].legs[1].duration.text}`;
-										document.getElementById('leg3').textContent = `Leg 3: ${response.routes[0].legs[2].duration.text}`;
+										document.getElementById('leg1').textContent = `　↓　${response.routes[0].legs[0].duration.text}`;
+										document.getElementById('leg2').textContent = `　↓　${response.routes[0].legs[1].duration.text}`;
+										document.getElementById('leg3').textContent = `　↓　${response.routes[0].legs[2].duration.text}`;
 									} else {
 										alert('ルートの取得中にエラーが発生しました: ' + status);
 									}
@@ -288,18 +380,10 @@ $(function($){
 		<script
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVClt3T6_YjhogNvKLn8XYb20nSNifSKg&callback=initMap"
 			async defer></script>
-		
-		<div class="suke">
-			<h3>スケジュール</h3>
-			<p>名前 場所</p>
-			<p>↓ 時間</p>
-			<p>名前 場所</p>
-			<p>↓ 時間</p>
-			<p>名前 場所</p>
-			<p>↓ 時間</p>
-		</div>
+
 
 	</div>
+	<br>
 	<hr>
 	<br>
 	<div>
@@ -310,66 +394,72 @@ $(function($){
 		<button class="btn" onclick="location.href='./mypage.html'">リスト作成</button>
 	</div>
 	<!--footer-------------------------------------------->
-    <div class="f_menu">
-        
-        
-        <!--footer_ナビゲーション-->
-        <ul>
-            <li></li>
-            
-            <li></li>
-            
-            <li></li>
-            
-            <li></li>
-            
-            <li>
-                    <div class="f_menubtn">
-                        <div><i class="fas fa-bars"></i></div>
-                    </div>
-                
-            </li>
-        </ul>
-    </div>
-    <!--footer_メニューの中身-->
-            <div class="f_open">
-                <div class="f_logo">
-                 <img src="../imag/logo22.png" alt=""/>
-                </div>
-                
-                <div class="category_list">
-                    <dl>
-                        <dd>ボタン</dd>
-                    </dl>
-                    
-                    <dl>
-                        <dd>ボタン</dd>
-                    </dl>
-                    
-                    <dl>
-                        <dd><div class="btn-sin">新規登録</div></dd>
-                    </dl>
-                    
-                    <dl>
-                        <dd><div class= "btn-log">ログイン</div></dd>
-                    </dl>
-                
-            </div>
+	<div class="f_menu">
 
-    </div>
-    
-    
-    
-    <footer>
-    <p class="copyright">
-        ©︎Oritabi　All Rights Reserved.
-    </p>
-    </footer>
-    <!--sliderのjs-------------------------------------------->
-<script type="text/javascript"src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="js/test.js"></script>
-<script type="text/javascript" src="js/slick.min.js"></script>
+
+		<!--footer_ナビゲーション-->
+		<ul>
+			<li></li>
+
+			<li></li>
+
+			<li></li>
+
+			<li></li>
+
+			<li>
+				<div class="f_menubtn">
+					<div>
+						<i class="fas fa-bars"></i>
+					</div>
+				</div>
+
+			</li>
+		</ul>
+	</div>
+	<!--footer_メニューの中身-->
+	<div class="f_open">
+		<div class="f_logo">
+			<img src="../imag/logo22.png" alt="" />
+		</div>
+
+		<div class="category_list">
+			<dl>
+				<dd>ボタン</dd>
+			</dl>
+
+			<dl>
+				<dd>ボタン</dd>
+			</dl>
+
+			<dl>
+				<dd>
+					<div class="btn-sin">新規登録</div>
+				</dd>
+			</dl>
+
+			<dl>
+				<dd>
+					<div class="btn-log">ログイン</div>
+				</dd>
+			</dl>
+
+		</div>
+
+	</div>
+
+
+
+	<footer>
+		<p class="copyright">©︎Oritabi All Rights Reserved.</p>
+	</footer>
+	<!--sliderのjs-------------------------------------------->
+	<script type="text/javascript"
+		src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript"
+		src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/test.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
 
 
 
